k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketing-service
spec:
  selector: { app: marketing-service }
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
