k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketing-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: marketing-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketing-service
                port: { number: 80 }
